# MidiJam

./: .gitignore  CMakeLists.txt  README.adoc
src/: AnimationController.cpp  AnimationController.h  DirectMusicSegmentWrapper.cpp  DirectMusicSegmentWrapper.h  DirectMusicSystem.cpp  DirectMusicSystem.h  IMidiJamTool.cpp  IMidiJamTool.h  MatrixMath.cpp  MatrixMath.h  MidiJam.cpp  MidiJam.h  Ms3dBundle.cpp  Ms3dBundle.h  ObjectConstructor.h  Quaternion.cpp  Quaternion.h  Vector3.h  camera.cpp  camera.h  fade.cpp  fade.h  fonts.cpp  fonts.h  glhelp.h  globals.cpp  globals.h  hwf.cpp  hwf.h  input.cpp  input.h  main.cpp  midi.cpp  midi.h  text.cpp  text.h  textures.cpp  textures.h
src/instrument/: Accordion.cpp  Accordion.h  Bass.cpp  Bass.h  Harp.cpp  Harp.h  Percussion.cpp  Percussion.h  Piano.cpp  Piano.h  StageHorn.cpp  StageHorn.h  StageString.cpp  StageString.h  Xylophone.cpp  Xylophone.h  instrument.cpp  instrument.h
